# viktor_assessment_store

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
shop/: admin.py  filters.py  models.py  serializers.py  tests.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_book_weight_alter_musicalbum_weight.py
viktor_store_assessment/: asgi.py  settings.py  urls.py  wsgi.py
