[tool.poetry]
name = "viktor-store-assessment"
version = "0.1.0"
description = ""
authors = ["Hasitha <hasithadman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.7"
djangorestframework = "^3.16.1"
python-dotenv = "^1.2.1"
drf-yasg = "^1.21.11"
django-filter = "^25.2"
psycopg2-binary = "^2.9.11"
django-cors-headers = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
